# yek

./: Makefile  README.md  pyproject.toml
examples/: _util.py  open_window.py
tests/: pynput_utils.py  test_action_bank.py  test_darwin_permissions.py  test_matchers.py
yek/: __init__.py  action.py  data_structures.py  events.py  key_utils.py  keys.py  matchers.py  shortcuts.py  time.py  util.py
