[tool.poetry]
name = "yek"
version = "0.1.0"
description = ""
authors = ["Gustavo <github.dxabr@aleeas.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pynput = "^1.7.7"
watchdog = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
