[project]
name = "yek"
version = "0.0.5"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Gustavo", email = "github.dxabr@aleeas.com" }]
dependencies = [
    "pynput>=1.7.7,<2.0.0",
    "watchdog>=5.0.3,<6.0.0",
]

[tool.poetry]
name = "yek"
version = "0.1.0"
description = ""
authors = ["Gustavo <github.dxabr@aleeas.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pynput = "^1.7.7"
watchdog = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint>=4.0.3",
]
